--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="font-['Roboto']">
+<body class="font-['Roboto'] w-[359px] h-[366px]">
     <div class="2xl:container mx-auto h-screen bg-[url('https://ik.imagekit.io/4z8covdo9/Full%20stack/todolistbg.png?updatedAt=1700761069523')] bg-cover bg-repeat">
         <div class="safty-container w-[90%] mx-auto flex flex-col items-center">
             <H1 class="text-white text-[36px] ">Todolist</H1>
